--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </div>
     <div class="info">
         <p class="link">中獎消息請以<a href="https://vhpi.5000.gov.tw/">官方網站</a>為主</p>
-        <p class="update">更新時間：2021/10/21 12:00</p>
+        <p class="update">更新時間：2021/10/21 (本週已更新至動滋券)</p>
     </div>
     </div>
 </body>
