--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title> 振興加碼券一鍵查 </title>
+  <title> 加碼券中獎一鍵查 </title>
   <link rel="stylesheet" href="style_5000.css">
   <script async src="5000.js"></script>
 </head>
