--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="box" style="width:350px; height:350px; background-color: #eee;">
         <div class="function">
-        <h1>加碼券中獎一鍵查</h1>
+        <h1>2021 振興加碼券中獎一鍵查</h1>
         <p class="intro">請輸入身分證字號後三碼： </p>
         <p class="private">（不追蹤、不儲存個資，請安心使用） </p>
         <input type="text" id="idNumber" class="idNumber">
