--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <p class="showResult"></p>
         <p class="showPrize"></p>
         <p class="showPrize2"></p>
+        <p class="showPrize3"></p>
         <p class="showWarn"></p>
         </div>
     <div class="info">
