--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <script async src="5000.js"></script>
 </head>
 <body>
-    <div class="box" style="width:350px; height:350px; background-color: #eee;">
+    <div class="box" style="width:350px; height:375px; background-color: #eee;">
         <div class="function">
         <h1 class= "line1">加碼券中獎一鍵查</h1>
         <p class="intro">請輸入身分證字號後三碼： </p>
@@ -25,7 +25,7 @@
         </div>
     <div class="info">
         <p class="link">網站僅為自主練習使用，中獎消息請以<a href="https://vhpi.5000.gov.tw/">官方網站</a>為主</p>
-        <p class="update">更新時間：2021/10/27 (本週三獎項皆已更新)</p>
+        <p class="update">更新時間：2021/10/28 (本週四已更新動滋券)</p>
     </div>
     </div>
 </body>
