--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </div>
     <div class="info">
         <p class="link">網站僅為自主練習使用，中獎消息請以<a href="https://vhpi.5000.gov.tw/" target="_blank">官方網站</a>為主</p>
-        <p class="update">更新時間：2021/10/29 (第三週獎項皆已更新)</p>
+        <p class="update">更新時間：2021/11/02 (本週二獎項皆已更新)</p>
     </div>
     </div>
 </body>
