--- a/index.html
+++ b/index.html
@@ -17,15 +17,16 @@
         <input type="button" id="submit" class="submit" value="提交"></input>
     </div> 
         <div class="result">
-        <p class="showResult"></p>
+        <h3 class="showResult"></h3>
         <p class="showPrize"></p>
         <p class="showPrize2"></p>
         <p class="showPrize3"></p>
+        <p class="showPrize4"></p>
         <p class="showWarn"></p>
         </div>
     <div class="info">
         <p class="link">網站僅為自主練習使用，中獎消息請以<a href="https://vhpi.5000.gov.tw/" target="_blank">官方網站</a>為主</p>
-        <p class="update">更新時間：2021/11/03 (本週三已更新至農遊券)</p>
+        <p class="update">更新時間：2021/11/04 (本週四已更新至動滋券)</p>
     </div>
     </div>
 </body>
