--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </div>
     <div class="info">
         <p class="link">網站僅為自主練習使用，中獎消息請以<a href="https://vhpi.5000.gov.tw/" target="_blank">官方網站</a>為主</p>
-        <p class="update">更新時間：2021/11/05 (恭喜所有得獎者，所有獎項皆已更新完畢！)</p>
+        <p class="update">更新時間：2021/11/05 (恭喜得獎者，所有獎項皆已更新完畢！)</p>
     </div>
     </div>
 </body>
